Work in IPRE data analysis